# AJRenderer

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  matrix.h  objectmodel.cpp  objectmodel.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h  triangle.cpp  triangle.h  vector.cpp  vector.h  vectorview.cpp  vectorview.h  vertex.cpp  vertex.h  warefrontobject.cpp  warefrontobject.h
